# wb_best_parser

./: .env.dist  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  targets.txt
.github/workflows/: deploy.yml
scripts/: auth_session.py
src/infrastructure/: __init__.py  openai.py
src/wb_best_parser/: __main__.py  app.py  config.py  constants.py  dedup.py  filters.py
